--- a/Alllive/Views/User/_EditAttendee.cshtml
+++ b/Alllive/Views/User/_EditAttendee.cshtml
@@ -10,10 +10,10 @@
                 <h4 class="modal-title">Attendee</h4>
             </div>
             <div class="modal-body">
-                @{int test = @ViewBag.SessionId; }
                 @*@Html.Hidden("SessionID", @test)*@
                 @Html.Hidden("editAttendeeID")
                 @Html.Hidden("editUserID")
+                
                 <div class="row">
                     <div class="col-sm-4">
                         @Html.Label("Name")
@@ -35,7 +35,7 @@
                         @Html.Label("SessionID")
                     </div>
                     <div class="col-sm-6">
-                        <input type="text" name="editSessionID" id="editSessionID" class="form-control" readonly value="@test" />
+                        <input type="text" name="editSessionID" id="editSessionID" class="form-control" readonly />
                     </div>
                 </div>
                 <div class="row">
