--- a/Alllive/Views/User/ViewProfile.cshtml
+++ b/Alllive/Views/User/ViewProfile.cshtml
@@ -7,71 +7,20 @@
             <thead><tr><th>Profile</th></tr></thead>
             <tbody>
 
-                <tr> <td><a href="@Url.Action("ViewProfile","User")">Public Profile</a> </td></tr>
-                <tr><td><a href="#">Payment Information</a></td></tr>
+                <tr> <td><a href="@Url.Action("ViewProfile", "User", new { viewPage = "1" })">Public Profile</a> </td></tr>
+                <tr><td><a href="@Url.Action("ViewProfile","User", new { viewPage = "2" })">Payment Information</a></td></tr>
                 <tr><td><a href="#">Availability</a></td></tr>
             </tbody>
         </table>
     </div>
     <div class="col-md-6">
-        @using (Ajax.BeginForm("SaveUserProfile", new AjaxOptions { OnSuccess = "SaveUserProfile_Success", HttpMethod = "POST" }))
+        @if (ViewBag.Page=="1")
         {
-            @Html.HiddenFor(a => a.User.UserID)
-            @Html.HiddenFor(a => a.User.UserName)
-
-            <div>
-
-                <div class="col-sm">
-                    @Html.DisplayFor(a => a.User.FirstName, new { @style = "width:100px" })
-                    @Html.DisplayFor(a => a.User.LastName, new { @style = "width:100px" })
-                </div>
-            </div>
-
-            <div>
-
-                <div class="col-sm">
-                    @Html.DisplayFor(a => a.User.TimeZone, new { @class = "form-control", @style = "width:100px" })
-                </div>
-            </div>
-
-            <div>
-
-                <div class="col-sm">
-                    <span>@Model.User.UserName</span>
-                </div>
-
-
-            </div>
-            if (Model.TutorProfile != null)
-            {
-                <p>
-                    <img src="~/Images/silhoutte.png" />
-                </p>
-
-                <table>
-                    <tr>
-                        <td><hr />Headline</td>
-                        <td>
-                            @Model.TutorProfile.HeadLine
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td><hr />Bio</td>
-                        <td>
-                            @Model.TutorProfile.Bio
-                        </td>
-                    </tr>
-                </table>
-                <div class="row">
-                    <div class="col-sm-1">
-                        @Html.Label("Rate")
-                    </div>
-                    <div class="col-sm-1">
-                        @Html.ValueFor(a => a.TutorProfile.Rate)
-                    </div>
-                </div>
-            }
+            Html.RenderPartial("_ViewProfile");
+        }
+        else if(ViewBag.Page=="2")
+        {
+            Html.RenderPartial("_PaymentProfile");
         }
     </div>
 </div>
